add find 1 struct API and service
